--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # "root" as username and password.
 spring.datasource.url=jdbc:mysql://localhost:3306/crud_test
 spring.datasource.username=root
-spring.datasource.password=nbuser
+spring.datasource.password=Aston123
 
 
 # Keep the connection alive if idle for a long time (needed in production)
