--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.hibernate.ddl-auto = none
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+IMAGE_UPLOAD_BASE_DIR = src/main/resources/static/uploads/
+
